plugins {
    id 'com.android.application'
}

def apikeyPropertiesFile = rootProject.file("apikey.properties")
def apikeyProperties = new Properties()
apikeyProperties.load(new FileInputStream(apikeyPropertiesFile))

android {
    compileSdkVersion 30
    buildToolsVersion "30.0.3"

    defaultConfig {
        applicationId "com.example.schedulein_20"
        minSdkVersion 27
        targetSdkVersion 30
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"

        /* ---------------------------- Room schemas FOR REST TEMPLATE ---------------------------- */
        javaCompileOptions {
            annotationProcessorOptions {
                arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
            }
        }
        buildConfigField("String", "CONSUMER_KEY", apikeyProperties['CONSUMER_KEY'])
        buildConfigField("String", "CONSUMER_SECRET", apikeyProperties['CONSUMER_SECRET'])

        /* ------------------------------------------------------------------------------------ */
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
}

dependencies {

    implementation 'androidx.appcompat:appcompat:1.3.0'

    implementation "com.google.android.material:material:1.2.0-alpha05"
    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
    testImplementation 'junit:junit:4.+'
    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'

    // GLIDE IMPLEMENTATION
    implementation 'com.github.bumptech.glide:glide:4.11.0'
    // Glide v4 uses this new annotation processor -- see https://bumptech.github.io/glide/doc/generatedapi.html
    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'

    //parse
    implementation "com.github.parse-community.Parse-SDK-Android:parse:1.18.5"

    //parceler
    implementation 'org.parceler:parceler-api:1.1.12'
    annotationProcessor 'org.parceler:parceler:1.1.12'

    // sign in with google
    implementation 'com.google.android.gms:play-services-auth:19.2.0'

    // google calendar API
    implementation fileTree(dir: 'libs', include: '*.jar')
    implementation 'com.google.api-client:google-api-client:1.23.0'
    implementation 'com.google.oauth-client:google-oauth-client-jetty:1.23.0'
    implementation 'com.google.apis:google-api-services-calendar:v3-rev305-1.23.0'

    //Blur effect
    implementation 'com.github.mmin18:realtimeblurview:1.2.1'

    // Glide transformations
    implementation 'jp.wasabeef:glide-transformations:4.1.0'


    /* ----------------------- REST CLIENT TEMPLATE LIBRARIES ----------------------- */

    implementation fileTree(dir: 'libs', include: '*.jar')
    implementation 'com.codepath.libraries:android-oauth-handler:2.4.0'
    implementation 'commons-codec:commons-codec:1.10'
    // Room for simple persistence with an ORM
    def room_version = "2.3.0"
    implementation "androidx.room:room-runtime:$room_version"
    annotationProcessor "androidx.room:room-compiler:$room_version"
    implementation 'com.facebook.stetho:stetho:1.5.1'

    /* ----------------------------------------------------------------------- */

}
